k8s-specifications/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-ip: <Your-First-IP>  # Replace with one of your external IPs
spec:
  selector:
    app: vote  # Make sure this matches the label of your vote pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
